src/mongo/logger/logger.cpp
@@ -43,7 +43,7 @@ namespace logger {
      * Just in case no static initializer called globalLogManager, make sure that the global log
      * manager is instantiated while we're still in a single-threaded context.
      */
-    MONGO_INITIALIZER_GENERAL(GlobalLogManager, MONGO_NO_PREREQUISITES, ("default"))(
+    MONGO_INITIALIZER_GENERAL(GlobalLogManager, ("ValidateLocale"), ("default"))(
             InitializerContext*) {
 
         globalLogManager();
